Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18855

[definitely not EXPLORER] a subtle keyboard focus glitch in the startmenu

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.16
    • Shell
    • None

    Description

      Reproduction steps

      • boot ros to desktop
      • press left Windows key (the startmenu will open without any selection highlighting)
      • press arrow-up (shutdown will be highlighted)
      • press ESC (the startmenu will close)
      • press left Windows key again

      Observed result
      Shutdown will be highlighted erroneously, ros remembered the last selection the user chose when ESC was hit

      Expected result
      on Windows XPSP3 using the Microsoft explorer.exe the 2nd press of left Winkey will again have no selection. Same result as when it was pressed for the first time. The OS must not remember the previous selection.

      This may sound trivial and bonkers to file a bug about that, but it might be important for people that are used to "press Winkey, then Arrow-up, then Enter" to invoke the shutdown dlg

      I do report that glitch against
      0.4.15-dev-5728-g2284aa6_affected_by_that_subtle_glitch.webm
      0.4.15-dev-5728-g2284aa6_affected_by_that_subtle_glitch.log

      Attachments

        Activity

          People

            xmine64 xmine64
            reactosfanboy reactosfanboy
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: